tests/fixtures/invalid/nat_range_constant_index_out_of_bounds.gcl
// Error: constant nat-range index expressions are checked statically.
param v: Dimensionless[3] = table[3] { 1.0; 2.0; 3.0; };

node a: Dimensionless = @v[5];
